# NOTE: pytorch and lightning must be installed first by the user 

[tool.poetry]
name = "rewards"
version = "0.0.0.11"
description = "Start learning about RL and make model and envs in minutes in just few lines of code"
authors = ["rewards.ai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rewards = 'rewards.__main__:main'
